# FarmFresh_Organic_Farm_Website

./: .gitignore  pyproject.toml
Organicfarm/: manage.py
Organicfarm/Organicfarm/: asgi.py  settings.py  urls.py  wsgi.py
Organicfarm/articles/: admin.py  models.py  serializers.py  urls.py  views.py
Organicfarm/articles/migrations/: 0001_initial.py  0002_alter_article_slug_alter_articlescategory_slug.py  0003_alter_articleimage_options_and_more.py  0004_alter_article_title.py  0005_alter_article_title.py  0006_alter_article_title.py
Organicfarm/authapi/: admin.py  models.py  serializers.py  urls.py  views.py
Organicfarm/authapi/migrations/: 0001_initial.py  0002_alter_customuser_is_active.py  0003_customuser_is_superuser_customuser_is_verified_and_more.py
Organicfarm/blogs/: admin.py  models.py  serializers.py  urls.py  views.py
Organicfarm/blogs/migrations/: 0001_initial.py  0002_alter_article_slug_alter_articlescategory_slug.py  0002_alter_articles_tags.py  0003_alter_article_slug_alter_articlescategory_slug.py  0004_alter_article_image.py
Organicfarm/core/: admin.py  models.py  serializers.py  urls.py  views.py
Organicfarm/core/migrations/: 0001_initial.py  0003_alter_productimage_options_and_more.py  (+12 more)
Organicfarm/products/: admin.py  models.py  serializers.py  urls.py  views.py
Organicfarm/shop/: admin.py  models.py  serializers.py  urls.py  views.py
Organicfarm/templates/: about_page.html  base.html  contact_page.html  footer.html  header.html  home.html
backend/: .env
backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
client/: tailwind.config.ts
client/app/: page.tsx
client/components/: Footer.tsx  Header.tsx
client/containers/: About.tsx  Banner.tsx  Blog.tsx  Blogtags.tsx  Categories.tsx  Features.tsx  Products.tsx  Recentpost.tsx  Services.tsx  Team.tsx  Testimonial.tsx  index.ts
(+45 files in other folders)
